--- a/examples/style/default.css
+++ b/examples/style/default.css
@@ -221,6 +221,14 @@ a:hover{
 
 }
 
+.test-button {
+    width: 200px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
 /* =============================== */
 /* Tests Styles
 /* =============================== */
