--- a/examples/style/default.css
+++ b/examples/style/default.css
@@ -1,20 +1,12 @@
 @namespace xml3d "http://www.xml3d.org/2009/xml3d";
 
+/* ============================================================================
+ * === page.js ===
+ * ============================================================================ */
+
 * {
     padding: 0;
     margin: 0;
-}
-
-xml3d|float,
-xml3d|float2,
-xml3d|float3,
-xml3d|float4,
-xml3d|float4x4,
-xml3d|int,
-xml3d|int4,
-xml3d|bool,
-xml3d|script  {
-   display: none;
 }
 
 body {
@@ -179,13 +171,6 @@ a:hover{
     padding-bottom: 4px;
 }
 
-#content div.description{
-    border: 1px solid #ccc;
-    background: #eee;
-    padding: 8px;
-    margin-bottom: 8px;
-}
-
 #content .xml3d{
     display: block;
     border: 1px solid #aaa;
@@ -215,10 +200,20 @@ a:hover{
     display: block;
 }
 
-
-
 #footer {
 
+}
+
+/* ============================================================================
+ * === own stuff ===
+ * ============================================================================ */
+
+.actions {
+    margin-top: 2%;
+}
+
+.description {
+    margin-top: 2%;
 }
 
 .test-button {
@@ -227,107 +222,4 @@ a:hover{
     padding-bottom: 2px;
     margin-top: 5px;
     margin-bottom: 5px;
-}
-
-/* =============================== */
-/* Tests Styles
-/* =============================== */
-div.message{
-   border: 1px solid #666666;
-   padding: 4px;
-   margin: 0 0 4px 0;
-}
-
-div.actions{
-   clear: both;
-   border: 1px solid #ccc;
-   background-color: #fff;
-   padding: 4px;
-   margin: 0 0 4px 0;
-}
-
-div.actions a{
-   padding-right: 8px;
-}
-
-
-div.groundtruth{
-   border: 1px solid #006600;
-   background-color: #003300;
-   padding: 4px 6px;
-   margin: 0 4px 4px 0;
-   float: left;
-   width: 320px;
-   overflow: hidden;
-}
-
-.groundtruth h3{
-    padding: 0;
-    margin: 4px 0 4px 0;
-}
-
-.groundtruth img{
-    padding: 0;
-    margin: 0;
-}
-
-.groundtruth p{
-   width: 300px;
-}
-
-table.testtable  {
-   margin: 14px;
-   width: 300px;
-}
-
-table, td, th
-{
-    border-color: #000;
-    border-style: solid;
-}
-
-table
-{
-    border-width: 0 0 1px 1px;
-    border-spacing: 0;
-    border-collapse: collapse;
-}
-
-td, th
-{
-    margin: 0;
-    padding: 4px;
-    border-width: 1px 1px 0 0;
-    background-color: #666;
-}
-
-/* Description */
-
-div#description{
-   width: 400px;
-   float: left;
-   border: 1px solid #666666;
-   padding: 6px;
-   margin: 0 8px 4px 0;
-   min-height: 188px
-
-}
-
-#description button
-{
-   width: 150px;
-   float: left;
-}
-
-#description div
-{
-   clear: left;
-   border-top: 1px solid #333333;
-   padding: 4px 0;
-}
-#description div p
-{
-   padding: 0px 0 4px 4px;
-   margin: 0 0 0 158px;
-   border-left: 1px solid #333333;
 }
